@@ -1,8 +1,7 @@
 
-R version 3.0.0 alpha (2013-03-12 r62217) -- "Unsuffered Consequences"
+R version 3.0.1 Patched (2013-07-06 r63204) -- "Good Sport"
 Copyright (C) 2013 The R Foundation for Statistical Computing
-ISBN 3-900051-07-0
-Platform: x86_64-apple-darwin12.2.0 (64-bit)
+Platform: x86_64-apple-darwin12.4.0 (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -17,8 +16,6 @@ Type 'contributors()' for more information and
 Type 'demo()' for some demos, 'help()' for on-line help, or
 'help.start()' for an HTML browser interface to help.
 Type 'q()' to quit R.
-
-[Previously saved workspace restored]
 
 > library(minfiData)
 Loading required package: minfi
@@ -39,11 +36,11 @@ The following object is masked from ‘package:stats’:
 
 The following objects are masked from ‘package:base’:
 
-    anyDuplicated, as.data.frame, cbind, colnames, duplicated, eval,
-    Filter, Find, get, intersect, lapply, Map, mapply, match, mget,
-    order, paste, pmax, pmax.int, pmin, pmin.int, Position, rank,
-    rbind, Reduce, rep.int, rownames, sapply, setdiff, sort, table,
-    tapply, union, unique, unlist
+    anyDuplicated, append, as.data.frame, as.vector, cbind, colnames,
+    duplicated, eval, Filter, Find, get, intersect, lapply, Map,
+    mapply, match, mget, order, paste, pmax, pmax.int, pmin, pmin.int,
+    Position, rank, rbind, Reduce, rep.int, rownames, sapply, setdiff,
+    sort, table, tapply, union, unique, unlist
 
 Loading required package: Biobase
 Welcome to Bioconductor
@@ -73,7 +70,15 @@ The following object is masked from ‘package:reshape’:
 
 The following object is masked from ‘package:plyr’:
 
-    compact, desc, rename
+    desc, rename
+
+Loading required package: XVector
+
+Attaching package: ‘XVector’
+
+The following object is masked from ‘package:plyr’:
+
+    compact
 
 Loading required package: Biostrings
 Loading required package: IlluminaHumanMethylation450kmanifest
@@ -82,31 +87,32 @@ Loading required package: IlluminaHumanMethylation450kmanifest
 > Mset.illumina <- preprocessIllumina(RGsetEx)
 > set.seed(456)
 > Mset.swan <- preprocessSWAN(RGsetEx)
-Normalizing array 1 of 6
-Normalizing array 2 of 6
-Normalizing array 3 of 6
-Normalizing array 4 of 6
-Normalizing array 5 of 6
-Normalizing array 6 of 6
+> Mset.quantile <- preprocessQuantile(MsetEx)
+[preprocessQuantile] Mapping to genome.
+Loading required package: IlluminaHumanMethylation450kannotation.ilmn.v1.2
+[preprocessQuantile] Fixing outliers.
+[preprocessQuantile] Quantile normalizing.
 > 
 > testDigests <- list(
 +     preprocessRaw = list(Meth = minfi:::.digestMatrix(getMeth(Mset.raw)),
-+     Unmeth = minfi:::.digestMatrix(getUnmeth(Mset.raw))),
++       Unmeth = minfi:::.digestMatrix(getUnmeth(Mset.raw))),
 +     preprocessIllumina = list(Meth = minfi:::.digestMatrix(getMeth(Mset.illumina)),
-+     Unmeth = minfi:::.digestMatrix(getUnmeth(Mset.illumina))),
++       Unmeth = minfi:::.digestMatrix(getUnmeth(Mset.illumina))),
 +     preprocessSWAN = list(Meth = minfi:::.digestMatrix(getMeth(Mset.swan)),
-+     Unmeth = minfi:::.digestMatrix(getUnmeth(Mset.swan)))
++       Unmeth = minfi:::.digestMatrix(getUnmeth(Mset.swan))),
++     preprocessQuantile = list(M = minfi:::.digestMatrix(getM(Mset.quantile)),
++       CN = minfi:::.digestMatrix(getCN(Mset.quantile)))
 +     )
 > 
 > save(testDigests, file = "../unitTests/testDigests.rda")
 > 
 > gc()
-           used  (Mb) gc trigger  (Mb) max used  (Mb)
-Ncells  2850966 152.3    4953636 264.6  4953636 264.6
-Vcells 38565311 294.3   96197708 734.0 95125131 725.8
+           used  (Mb) gc trigger   (Mb)  max used   (Mb)
+Ncells  4908993 262.2    7700734  411.3   7700734  411.3
+Vcells 91642485 699.2  175332471 1337.7 175324820 1337.7
 > sessionInfo()                         
-R version 3.0.0 alpha (2013-03-12 r62217)
-Platform: x86_64-apple-darwin12.2.0 (64-bit)
+R version 3.0.1 Patched (2013-07-06 r63204)
+Platform: x86_64-apple-darwin12.4.0 (64-bit)
 
 locale:
 [1] en_US.utf-8/en_US.utf-8/en_US.utf-8/C/en_US.utf-8/en_US.utf-8
@@ -116,27 +122,29 @@ attached base packages:
 [8] base     
 
 other attached packages:
- [1] digest_0.6.3                              
- [2] minfiData_0.3.1                           
- [3] IlluminaHumanMethylation450kmanifest_0.4.0
- [4] minfi_1.5.6                               
- [5] Biostrings_2.27.11                        
- [6] GenomicRanges_1.11.38                     
- [7] IRanges_1.17.37                           
- [8] reshape_0.8.4                             
- [9] plyr_1.8                                  
-[10] lattice_0.20-13                           
-[11] Biobase_2.19.3                            
-[12] BiocGenerics_0.5.6                        
+ [1] IlluminaHumanMethylation450kannotation.ilmn.v1.2_0.1.3
+ [2] digest_0.6.3                                          
+ [3] minfiData_0.3.1                                       
+ [4] IlluminaHumanMethylation450kmanifest_0.4.0            
+ [5] minfi_1.7.7                                           
+ [6] Biostrings_2.29.13                                    
+ [7] GenomicRanges_1.13.33                                 
+ [8] XVector_0.1.0                                         
+ [9] IRanges_1.19.16                                       
+[10] reshape_0.8.4                                         
+[11] plyr_1.8                                              
+[12] lattice_0.20-15                                       
+[13] Biobase_2.21.6                                        
+[14] BiocGenerics_0.7.3                                    
 
 loaded via a namespace (and not attached):
- [1] beanplot_1.1          grid_3.0.0            illuminaio_0.1.5     
- [4] limma_3.15.15         MASS_7.3-24           matrixStats_0.6.2    
- [7] mclust_4.0            multtest_2.15.0       nor1mix_1.1-3        
-[10] preprocessCore_1.21.1 R.methodsS3_1.4.2     RColorBrewer_1.0-5   
-[13] siggenes_1.33.1       splines_3.0.0         stats4_3.0.0         
-[16] survival_2.37-4      
+ [1] base64_1.1            beanplot_1.1          grid_3.0.1           
+ [4] illuminaio_0.3.2      limma_3.17.16         MASS_7.3-27          
+ [7] matrixStats_0.8.1     mclust_4.1            multtest_2.17.0      
+[10] nor1mix_1.1-4         preprocessCore_1.23.0 R.methodsS3_1.4.4    
+[13] RColorBrewer_1.0-5    siggenes_1.35.0       splines_3.0.1        
+[16] stats4_3.0.1          survival_2.37-4      
 > 
 > proc.time()
    user  system elapsed 
- 82.598   6.799  89.969 
+110.321   8.048 118.413 
